--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ frontend/node_modules
 .env.development.local
 .env.test.local
 .env.production.local
+.env.status200
 
 npm-debug.log*
 yarn-debug.log*
