--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "npm run start --prefix backend",
+    "client": "npm run start --prefix frontend"
   },
   "repository": {
     "type": "git",
@@ -16,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/ellietms/QueueAndA/issues"
   },
-  "homepage": "https://github.com/ellietms/QueueAndA#readme"
+  "homepage": "https://github.com/ellietms/QueueAndA#readme",
+  "dependencies": {
+    "concurrently": "^5.3.0"
+  }
 }
