--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "npm run start --prefix backend",
-    "client": "npm run start --prefix frontend"
+    "server": "npm run start  backend",
+    "client": "npm run start  frontend"
   },
   "repository": {
     "type": "git",
