--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/ellietms/QueueAndA#readme",
   "dependencies": {
+    "axios": "^0.20.0",
     "concurrently": "^5.3.0"
   }
 }
