--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "QueueAndA",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "backend/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "npm run start --prefix backend",
-    "client": "npm run start --prefix frontend"
+    "client": "npm run start --prefix frontend",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
