--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/ellietms/QueueAndA#readme",
   "dependencies": {
     "axios": "^0.20.0",
-    "concurrently": "^5.3.0"
+    "concurrently": "^5.3.0",
+    "react-infinite-scroll-component": "^5.0.5"
   }
 }
