--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "concurrently": "^5.3.0",
+    "nodemailer": "^6.4.11",
     "react-infinite-scroll-component": "^5.0.5"
   }
 }
