--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "axios": "^0.20.0",
     "concurrently": "^5.3.0",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "nodemailer": "^6.4.11",
     "react-infinite-scroll-component": "^5.0.5"
   }
