--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.20.0",
     "concurrently": "^5.3.0",
     "nodemailer": "^6.4.11",
+    "react-html-parser": "^2.0.2",
     "react-infinite-scroll-component": "^5.0.5"
   }
 }
