--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment-timezone": "^0.5.31",
     "nodemailer": "^6.4.11",
     "react-html-parser": "^2.0.2",
-    "react-infinite-scroll-component": "^5.0.5"
+    "react-infinite-scroll-component": "^5.0.5",
+    "react-js-pagination": "^3.0.3"
   }
 }
