changes of header buttons

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.4.11",
     "react-html-parser": "^2.0.2",
     "react-infinite-scroll-component": "^5.0.5",
-    "react-js-pagination": "^3.0.3"
+    "react-js-pagination": "^3.0.3",
+    "styled-components": "^5.2.0"
   }
 }
