--- a/backend/description
+++ b/backend/description
@@ -1,6 +1,9 @@
-what you need to learn and review 
+what you need to review 
+
 //express router
 //mongoose
 //express
 //mongodb
 //react pagination
+//nodemailer
+
